final mobile overflow fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -136,6 +136,9 @@ main {
 	main {
 		margin: 0;
 	}
+	.nav-item:last-child {
+		display: none;
+	}
 }
 @media only screen and (min-width: 600px) {
 	.navbar {
